--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.5.6",
+    "framer-motion": "^10.12.17",
+    "next": "13.4.8",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
